Send keyboard-derived commands only if the key events are sent

There was a regression in https://codereview.chromium.org/2482853002

Previously, when a keydown was handled on the browser side, the keypress
was suppressed but the keyup was not. Now, all three events are
suppressed. However, the fix did not take into consideration the
InputMsg_SetEditCommandsForNextKeyEvent messages sent right before the
call to RenderWidgetHostImpl::ForwardKeyboardEvent at two call sites.
Because the keyup event was also suppressed, those commands would
instead be associated with a following keydown.

See https://bugs.chromium.org/p/chromium/issues/detail?id=677827#c11 for
how that could end up dropping the keypress event of what followed.

The fix is to introduce a ForwardKeyboardEventWithCommands which sends
the commands only if they key itself is sent.

BUG=677827

Review-Url: https://codereview.chromium.org/2644843004
Cr-Commit-Position: refs/heads/master@{#445687}

Former-commit-id: b7b0799fa40dd39cc93e826e6bacfea41231d989